Update of various pages with current information.
* Removed some dead links on player art pages.
* Removed addresses from non-existent hosts in connect info
* Updated guild page to reflect currently online guilds
* Updated title banner to remove old hostnames/ips
* Added mudconnect vote button
* Removed some backup files, we have git now

--- a/art/index.html
+++ b/art/index.html
@@ -86,7 +86,7 @@ PG-13 at worst and are safe to view from work.</p>
 </p>
 
 <p><strong>Art by Psycho</strong><br />
-<a href="http://eotl.norse.org.au/viewpic.cgi">Psycho's Gallery</a><br />
+<a href="http://norse.org.uk/">Psycho's Gallery</a><br />
 <a href="chicken_of_doom.jpg">Chicken of Doom</a>
 </p>
 
