--- a/connect.html
+++ b/connect.html
@@ -52,8 +52,7 @@
 First of all, you have to be able to <strong>telnet</strong> from
 your system.
 This is easy from a Unix or VMS system.
-If you're using AOL, you need to download their 16-bit Winsock
-application (Microsoft's Winsock won't work for you).</p>
+</p>
 
 <h4>Unix users</h4>
 
@@ -62,10 +61,7 @@ You can use one of the following commands from your prompt:</p>
 
 <pre>
     telnet eotl.org 2010
-    telnet mud.stanford.edu 2010
-    telnet 171.64.14.16&#160;2010
 </pre>
-<!-- old IP 36.21.0.99 2010 -->
 
 <p>
 Alternatively, you can use the popular
@@ -78,12 +74,12 @@ The commands you can use are:</p>
 
 <pre>
     telnet/port="2010" eotl.org
-    telnet/port="2010" mud.stanford.edu
-    telnet/port="2010" 171.64.14.16
 </pre>
 
-<h4>Windows 95/98 users</h4>
-
+<h4>Windows users</h4>
+<p>
+<a href="https://www.chiark.greenend.org.uk/~sgtatham/putty/">PuTTY</a> is
+no frills telnet client which can be used to connect.</p>
 <p>
 Zugg's <a href="http://www.zuggsoft.com/zmud/">zMUD</a> is a
 popular graphical MUD/telnet client for Windows.</p>
@@ -100,7 +96,7 @@ and seems to be a popular mud client for Mac users.</p>
 
 <p>
 Or, from your Web browser, you may be able to go directly from here
-to the <a href="telnet://mud.eotl.org:2010">End of the Line</a>!</p>
+to the <a href="telnet://eotl.org:2010">End of the Line</a>!</p>
 
   </td>
 <!--  END MAIN SECTION  -->
