--- a/errors/404.html
+++ b/errors/404.html
@@ -15,7 +15,7 @@
   <tr>
   <td rowspan="20"><img src="/img/clr.gif" alt="" width="1" height="1" hspace="5" /></td>
     <td bgcolor="#000000" width="582" nowrap="nowrap" align="center"><span style="color: #FFFFFF;"
-    ><img src="/img/title.gif"
+    ><img src="/img/title.png"
     alt="End of the Line LP Mud - 171.64.14.16 2010" width="582" height="90" /></span><br />
     <img src="/img/clr.gif" width="1" height="1" vspace="3" alt="" /></td>
   </tr>
