--- a/guilds/index.html
+++ b/guilds/index.html
@@ -72,10 +72,10 @@ proficiencies and public skills will be reduced.
 
 <br /><img src="/img/clr.gif" alt="" vspace="4" width="1" height="1" /><br />
 
-It is generally considered bad form for a non-member to ask anyone where a
-guildhall is located.
-<i>If you don't know where a guild is, you don't belong and you're
-not wanted.</i>
+It is generally considered bad form for a non-member to ask for directions to
+where a guildhall is located. There are sometimes hints in the <a
+href="cgi-bin/help.pl?topics">help file</a> for the guild.
+<i>Some guild locations are quite difficult to find. </i>
 </p>
 
 <hr noshade="noshade" />
@@ -110,16 +110,6 @@ not wanted.</i>
 </tr>
 
 <tr>
-  <td valign="top" width="400"><p><a name="Mage"></a>
-    <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
-    <strong>Devilworshipper Guild</strong> (closed)</p></td>
-</tr>
-
-<tr>
-  <td><img src="/img/clr.gif" alt="" vspace="5" width="1" height="1" /><br /></td>
-</tr>
-
-<tr>
   <td bgcolor="#CCCC99" valign="top" width="400"><p><a name="Dustmen"></a>
     <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
     <a href="dustmen.html"><strong>Dustmen Guild</strong></a><br />
@@ -137,7 +127,7 @@ not wanted.</i>
 <tr>
   <td valign="top" width="400"><p><a name="Etc"></a>
     <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
-    <strong>Etc Guild</strong> (closed)</p></td>
+    <strong>Etc Guild</strong></p></td>
 </tr>
 
 <tr>
@@ -153,7 +143,7 @@ not wanted.</i>
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
     <a href="bodyguard.html">Bodyguards</a><br />
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
-    Swordsmen (closed)</p>
+    Swordsmen</p>
   </td>
 </tr>
 
@@ -166,11 +156,9 @@ not wanted.</i>
     <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
     <a href="forester.html"><strong>Forester Guild</strong></a><br />
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
-    <a href="druid.html">The Druidic Order</a><br />
+    <a href="druid.html">The Druidic Order (closed)</a><br />
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
     <a href="ranger.html">Rangers</a><br />
-    <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
-    The Society of Bards (closed)</p>
   </td>
 </tr>
 
@@ -181,7 +169,7 @@ not wanted.</i>
 <tr>
   <td valign="top" width="400"><p><a name="Headhunter"></a>
     <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
-    <strong>Headhunter Guild</strong> (closed)</p></td>
+    <strong>Headhunter Guild</strong></p></td>
 </tr>
 
 <tr>
@@ -199,22 +187,9 @@ not wanted.</i>
 </tr>
 
 <tr>
-  <td valign="top" width="400"><p><a name="Mage"></a>
+  <td valign="top" width="400"><p><a name="Mageslayer"></a>
     <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
-    <strong>Mage Guild</strong> (closed)</p></td>
-</tr>
-
-<tr>
-  <td><img src="/img/clr.gif" alt="" vspace="5" width="1" height="1" /><br /></td>
-</tr>
-
-<tr>
-  <td bgcolor="#FFFFCC" valign="top" width="400"><p><a name="Mob"></a>
-    <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
-    <a href="mob.html"><strong>Mob Guild</strong></a><br />
-    <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
-    Thugs</p>
-  </td>
+    <strong>Mageslayer Guild</strong></p></td>
 </tr>
 
 <tr>
@@ -224,12 +199,24 @@ not wanted.</i>
 <tr>
   <td bgcolor="#FFCCCC" valign="top" width="400"><p><a name="Pacifist"></a>
     <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
-    <a href="pacifist.html"><strong>Pacifist Guild</strong></a><br />
-    <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
-    Buddhists (closed)</p>
+    <a href="pacifist.html"><strong>Pacifist Guild</strong></a></p>
   </td>
 </tr>
 
+<tr>
+  <td><img src="/img/clr.gif" alt="" vspace="5" width="1" height="1" /><br /></td>
+</tr>
+
+<tr>
+  <td bgcolor="#E0FDFF" valign="top" width="400"><p><a name="Padawan"></a>
+    <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
+    <strong>Padawan Guild</strong></a><br />
+    <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
+    Jedi<br />
+    <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
+    Sith</p>
+  </td>
+</tr>
 <tr>
   <td><img src="/img/clr.gif" alt="" vspace="5" width="1" height="1" /><br /></td>
 </tr>
@@ -252,7 +239,9 @@ not wanted.</i>
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
     <a href="thief.html">Thieves</a><br />
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
-    <a href="assassin.html">Assassins</a></p>
+    <a href="assassin.html">Assassins</a><br />
+    <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
+    Bards</p>
   </td>
 </tr>
 
