--- a/misc/mudconnect.html
+++ b/misc/mudconnect.html
@@ -57,8 +57,8 @@ End of the Line (EotL)
 
 <center>
 <font size=-1><b>
-[ <a href="telnet://mud.stanford.edu:2010">Connect to EotL</a> |
-<a href="http://www.pobox.com/~eotl/">EotL Homepage</a> ]
+[ <a href="telnet://eotl.org:2010">Connect to EotL</a> |
+<a href="http://www.eotl.org/">EotL Homepage</a> ]
 </font></b>
 </center>
 
@@ -641,8 +641,8 @@ And go eat dead cow.
 
 <center>
 <font size=-1><b>
-[ <a href="telnet://mud.stanford.edu:2010">Connect to EotL</a> |
-<a href="http://www.pobox.com/~eotl/">EotL Homepage</a> ]
+[ <a href="telnet://eotl.org:2010">Connect to EotL</a> |
+<a href="http://www.eotl.org/">EotL Homepage</a> ]
 </b></font>
 </center>
 
@@ -650,7 +650,8 @@ And go eat dead cow.
 
 <center>
 <font size=+1>
-<a href="http://www.mudconnect.com/motm/">MotM Archives</a>
+<a
+href="https://web.archive.org/web/20121002150147/http://www.mudconnect.com/motm/">MotM Archives</a>
 </font>
 </center>
 
