--- a/mud_info.html
+++ b/mud_info.html
@@ -53,11 +53,10 @@
 <p>
 <a href="http://www.mudconnect.com/" target="_top"
   >The Mud Connector</a><br />
-<a href="http://www.mudcenter.com/" target="_top"
-  >Mudcenter</a> - MUD resources, lists, forums<br />
-<a href="http://mudlist.eorbit.net/~mudlinks/" target="_top"
-  >Mudlinks</a> - tracks MUD URLs and web pages that refer to them<br />
-&#160;&#160;&#160;&#160;&#160;&#160;&#160; (formerly Doran's Mudlist)<br />
+<a href="http://www.topmudsites.com/" target="_top"
+  >Top Mud Sites</a> - MUD resources, lists, forums<br />
+<a href="http://mudstats.com/" target="_top"
+  >Mudstats</a> - tracks MUD usage, sampling online players <br />
   <!-- The Game Grotto's
       a href="http://www.gamegrotto.com/content/mudpuddle/" target="_top"
       Mudpuddle -->
