--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <tr>
   <td rowspan="20"><img src="/img/clr.gif" alt="" width="1" height="1" hspace="5" /></td>
     <td bgcolor="#000000" width="582" nowrap="nowrap" align="center"><span style="color: #FFFFFF;"
-    ><img src="/img/title.gif"
+    ><img src="/img/title.png"
     alt="End of the Line LP Mud - eotl.org 2010" width="582" height="90" /></span><br />
     <table border="0" cellpadding="0" cellspacing="0"><tr><td height="1"></td></tr></table></td>
   </tr>
@@ -51,9 +51,9 @@
 
 <img src="/img/clr.gif" alt="" width="1" height="1" hspace="20" />
 
-<a class="menu" href="/guestbook/" target="_top"
+<!-- <a class="menu" href="/guestbook/" target="_top"
 ><img src="/img/point.gif" alt="" width="12" height="8" border="0" /></a
-><a class="menu" href="/guestbook/" target="_top">Guestbook</a><br />
+><a class="menu" href="/guestbook/" target="_top">Guestbook</a><br /> -->
 
     </td>
   </tr>
@@ -100,18 +100,18 @@
 
   <table border="0" cellpadding="0" cellspacing="0">
   <tr>
-    <td bgcolor="#FFFFFF" width="15" height="15" valign="top"><img src="/img/clr.gif" alt="" width="1" height="1"
+    <td bgcolor="#EFEFEF" width="15" height="15" valign="top"><img src="/img/clr.gif" alt="" width="1" height="1"
       hspace="7" vspace="7" /></td>
-    <td bgcolor="#FFFFFF" width="410" height="15"><img src="/img/clr.gif" alt="" width="1" height="1" hspace="204" /></td>
-    <td bgcolor="#FFFFFF" width="15" height="15"><img src="/img/clr.gif" alt="" width="1" height="1" hspace="7" /></td>
+    <td bgcolor="#EFEFEF" width="410" height="15"><img src="/img/clr.gif" alt="" width="1" height="1" hspace="204" /></td>
+    <td bgcolor="#EFEFEF" width="15" height="15"><img src="/img/clr.gif" alt="" width="1" height="1" hspace="7" /></td>
     <td bgcolor="#000000" width="140" height="15"><img src="/img/clr.gif" alt="" width="1" height="1" /></td>
   </tr>
 
   <tr>
-    <td bgcolor="#FFFFFF" width="15"><img src="/img/clr.gif" alt="" width="1" height="1" hspace="7" /></td>
+    <td bgcolor="#EFEFEF" width="15"><img src="/img/clr.gif" alt="" width="1" height="1" hspace="7" /></td>
 
 <!--  BEGIN MAIN SECTION  -->
-    <td bgcolor="#FFFFFF" width="410" valign="top">
+    <td bgcolor="#EFEFEF" width="410" valign="top">
 
 <p align="center" class="bignpurple2"><strong>
 One of the oldest LP Muds in existence &#151; since 1989!</strong></p>
@@ -172,12 +172,13 @@ Anonymous email without a valid return address will go directly to /dev/null.</f
     </td>
 <!--  END MAIN SECTION  -->
 
-    <td bgcolor="#FFFFFF" width="14"><img src="/img/clr.gif" alt="" width="1" height="1" hspace="6" /></td>
+    <td bgcolor="#EFEFEF" width="14"><img src="/img/clr.gif" alt="" width="1" height="1" hspace="6" /></td>
 
     <td align="left" bgcolor="#000000" valign="top" width="140">
 
-<p align="center" class="ss8w"><a href="http://www.topmudsites.com/cgi-bin/topmuds/rankem.cgi?id=eotl"><img src="/img/vote_mud.gif" border="0" width="88" height="31" alt="Vote Here" /></a><br />
-Please vote only once per 12-hour period.</p>
+<p align="center" class="ss8w"><a href="http://www.topmudsites.com/cgi-bin/topmuds/rankem.cgi?id=eotl"><img src="/img/vote_mud.gif" border="0" width="88" height="31" alt="Vote Here" /></a><br/> and/or <br/>
+<a href="https://www.mudconnect.com/cgi-bin/vote.cgi?mud=End+of+the+Line"><img width=88 src="/img/tmc_vote.png"></a><br/>
+Please vote only once per day.</p>
 
 <h4 align="center" class="bignwhite"><font color="#FFFFFF">Quick News</font></h4>
 
@@ -212,7 +213,7 @@ Connector</font></a>'s March&#160;1998 Mud of the Month!</font></p>
 
   <table border="1" cellpadding="10" cellspacing="0"><tr>
     <td align="center" bgcolor="#B885B0">
-<p><img src="/cgi-bin/counter/counter.pl" alt="" width="65" height="20" /><br />
+<p><img src="/cgi-bin/visitor/muddicts.pl" alt="" width="65" height="20" /><br />
 Muddicts<br />
 and<br />
 counting</p>
@@ -232,10 +233,10 @@ counting</p>
   </tr>
 
   <tr>
-    <td bgcolor="#FFFFFF" width="15" valign="bottom"><img src="/img/clr.gif" alt="" width="1" height="1"
+    <td bgcolor="#EFEFEF" width="15" valign="bottom"><img src="/img/clr.gif" alt="" width="1" height="1"
       hspace="7" vspace="7" /></td>
-    <td bgcolor="#FFFFFF" width="410"><img src="/img/clr.gif" alt="" width="1" height="1" /></td>
-    <td bgcolor="#FFFFFF" width="15"><img src="/img/clr.gif" alt="" width="1" height="1" hspace="7" /></td>
+    <td bgcolor="#EFEFEF" width="410"><img src="/img/clr.gif" alt="" width="1" height="1" /></td>
+    <td bgcolor="#EFEFEF" width="15"><img src="/img/clr.gif" alt="" width="1" height="1" hspace="7" /></td>
     <td bgcolor="#000000" width="140"><img src="/img/clr.gif" alt="" width="1" height="1" /></td>
   </tr>
 
