Guild pages added for some of the newer guild
Also changed dustmen.html to dustman.html to be consistent.

--- a/guilds/bard.html
+++ b/guilds/bard.html
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html 
   PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<title>Fighter Guild - End of the Line</title>
+<title>Bards - Rogue Guild - End of the Line</title>
 <meta http-equiv="Content-type" content='text/html; charset="UTF-8"' />
 <link rel="STYLESHEET" type="text/css" href="/css/eotl_0.css" />
 </head>
@@ -48,37 +47,28 @@
 <!--  BEGIN MAIN SECTION  -->
   <td bgcolor="#FFFFFF" width="410" valign="top">
 
-<h3 align="center">Fighter Guild</h3>
+<h3 align="center" style="margin-bottom: 0.5em;">Bards</h3>
 
-<p><em>Guild wizard: Reverend</em></p>
+<p align="center" style="margin-top: 0em;"><strong>Specialization of the
+<a href="rogue.html">Rogue</a> Guild</strong></p>
 
-<h4 class="hsep">Fighter Specializations</h4>
-<ul>
-  <li> <a href="berserker.html">Berserkers</a></li>
-  <li> <a href="bodyguard.html">Bodyguards</a></li>
-  <li> <a href="swordsman.html"> Swordsmen</a></li>
-</ul>
+<p><em>Guild wizard: Dorf</em></p>
 
 <h5 class="hsep">Guild Titles</h5>
 
-<table border="0" cellpadding="0" cellspacing="0">
-<tr>
-  <td>&#160;&#160;&#160;&#160;&#160;</td>
-  <td valign="top" class="ss8">
-the Squire<br />
-the Page<br />
-the Novice Warrior<br />
-the Trained Soldier<br />
-  </td>
-  <td>&#160;&#160;&#160;&#160;&#160;</td>
-  <td valign="top" class="ss8">
-the Seasoned Veteran<br />
-the Elite Fighter<br />
-the combat weary, battle-scarred warrior<br />
-  </td>
-</tr>
-</table>
-
+<ol type="i">
+  <li>the deadbeat</li>
+	<li>the charlatan</li>
+  <li>the circus performer</li>
+  <li>the trickster</li>
+  <li>he beginning musician</li>
+  <li>the charmer</li>
+  <li>the accomplished musician</li>
+  <li>the Troubadour</li>
+  <li>the Musical Master</li>
+  <li>the Bard</li>
+  <li>the Master Bard</li>
+</ol>
 <br />
 
 <hr noshade="noshade" />
