--- a/guilds/fallen.html
+++ b/guilds/fallen.html
@@ -51,7 +51,7 @@
 <h3 align="center" style="margin-bottom: 0.5em;">The Fallen</h3>
 
 <p align="center" style="margin-top: 0em;"><strong>Specialization of the
-<a href="dustmen.html">Dustmen</a> Guild</strong></p>
+<a href="dustman.html">Dustmen</a> Guild</strong></p>
 
 <p><em>Guild wizards: Guido and Whitewolf</em></p>
 
