--- a/guilds/index.html
+++ b/guilds/index.html
@@ -74,7 +74,7 @@ proficiencies and public skills will be reduced.
 
 It is generally considered bad form for a non-member to ask for directions to
 where a guildhall is located. There are sometimes hints in the <a
-href="cgi-bin/help.pl?topics">help file</a> for the guild.
+href="/cgi-bin/help.pl?topics">help file</a> for the guild.
 <i>Some guild locations are quite difficult to find. </i>
 </p>
 
@@ -112,7 +112,7 @@ href="cgi-bin/help.pl?topics">help file</a> for the guild.
 <tr>
   <td bgcolor="#CCCC99" valign="top" width="400"><p><a name="Dustmen"></a>
     <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
-    <a href="dustmen.html"><strong>Dustmen Guild</strong></a><br />
+    <a href="dustman.html"><strong>Dustmen Guild</strong></a><br />
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
     <a href="darkheart.html">Order of the Dark Heart</a><br />
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
@@ -127,7 +127,7 @@ href="cgi-bin/help.pl?topics">help file</a> for the guild.
 <tr>
   <td valign="top" width="400"><p><a name="Etc"></a>
     <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
-    <strong>Etc Guild</strong></p></td>
+    <a href="etc.html"><strong>Etc Guild</strong></a></p></td>
 </tr>
 
 <tr>
@@ -143,7 +143,7 @@ href="cgi-bin/help.pl?topics">help file</a> for the guild.
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
     <a href="bodyguard.html">Bodyguards</a><br />
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
-    Swordsmen</p>
+    <a href="swordsman.html">Swordsmen</a></p>
   </td>
 </tr>
 
@@ -169,7 +169,7 @@ href="cgi-bin/help.pl?topics">help file</a> for the guild.
 <tr>
   <td valign="top" width="400"><p><a name="Headhunter"></a>
     <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
-    <strong>Headhunter Guild</strong></p></td>
+    <a href="headhunter.html"><strong>Headhunter Guild</strong></a></p></td>
 </tr>
 
 <tr>
@@ -179,7 +179,7 @@ href="cgi-bin/help.pl?topics">help file</a> for the guild.
 <tr>
   <td bgcolor="#FFCC99" valign="top" width="400"><p><a name="Linguist"></a>
     <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
-    <strong>Linguist Guild</strong> (all skills are public)</p></td>
+    <a href="linguist.html"><strong>Linguist Guild</strong> (all skills are public)</a></p></td>
 </tr>
 
 <tr>
@@ -189,7 +189,7 @@ href="cgi-bin/help.pl?topics">help file</a> for the guild.
 <tr>
   <td valign="top" width="400"><p><a name="Mageslayer"></a>
     <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
-    <strong>Mageslayer Guild</strong></p></td>
+    <a href="mageslayer.html"><strong>Mageslayer Guild</strong></a></p></td>
 </tr>
 
 <tr>
@@ -210,11 +210,11 @@ href="cgi-bin/help.pl?topics">help file</a> for the guild.
 <tr>
   <td bgcolor="#E0FDFF" valign="top" width="400"><p><a name="Padawan"></a>
     <img src="/img/icon_shield.gif" alt="* " align="top" border="0" width="25" height="20" />
-    <strong>Padawan Guild</strong></a><br />
+    <a href="padawan.html"><strong>Padawan Guild</strong></a><br />
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
-    Jedi<br />
+    <a href="jedi.html">Jedi</a><br />
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
-    Sith</p>
+    <a href="sith.html">Sith</a></p>
   </td>
 </tr>
 <tr>
@@ -241,7 +241,7 @@ href="cgi-bin/help.pl?topics">help file</a> for the guild.
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
     <a href="assassin.html">Assassins</a><br />
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
-    Bards</p>
+    <a href="bard.html">Bards</a></p>
   </td>
 </tr>
 
