--- a/guilds/rogue.html
+++ b/guilds/rogue.html
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html 
-  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <title>Rogue Guild - End of the Line</title>
@@ -53,27 +51,25 @@
 <p><em>Guild wizards: Gandalf and Otto</em></p>
 
 <h4 class="hsep">Rogue Specializations</h4>
-<dl>
-  <dd> <a href="assassin.html">Assassins</a>
-  <dd> <a href="thief.html">Thieves</a>
-</dl>
+<ul>
+  <li> <a href="assassin.html">Assassins</a> </li>
+  <li> <a href="thief.html">Thieves</a> </li>
+  <li> <a href="bard.html">Bards</a> </li>
+</ul>
 
 <h5 class="hsep">Guild Titles</h5>
-
-<table border="0" cellpadding="0" cellspacing="0">
-<tr>
-  <td>&#160;&#160;&#160;&#160;&#160;</td>
-  <td valign="top" class="ss8">
-the punk<br />
-the scallawag<br />
-  </td>
-  <td>&#160;&#160;&#160;&#160;&#160;</td>
-  <td valign="top" class="ss8">
-the rogue<br />
-the thug<br />
-  </td>
-</tr>
-</table>
+<ol type="i">
+  <li>the trustworthy</li>
+  <li>the novice rogue</li>
+  <li>the amateur acrobat</li>
+  <li>the cunning scoundrel</li>
+  <li>the quick</li>
+  <li>the deft nightstalker</li>
+  <li>the elusive infiltrator</li>
+  <li>the expert swindler</li>
+  <li>the remorseless opportunist</li>
+  <li>, Prowler of the Underworld</li>
+</ol>
 
 <br />
 
