Update index.html to be valid xhmtl

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Anonymous email without a valid return address will go directly to /dev/null.</f
     <td align="left" bgcolor="#000000" valign="top" width="140">
 
 <p align="center" class="ss8w"><a href="http://www.topmudsites.com/cgi-bin/topmuds/rankem.cgi?id=eotl"><img src="/img/vote_mud.gif" border="0" width="88" height="31" alt="Vote Here" /></a><br/> and/or <br/>
-<a href="https://www.mudconnect.com/cgi-bin/vote.cgi?mud=End+of+the+Line"><img width=88 src="/img/tmc_vote.png"></a><br/>
+<a href="https://www.mudconnect.com/cgi-bin/vote.cgi?mud=End+of+the+Line"><img width="88" alt="tmc vote" src="/img/tmc_vote.png"/></a><br/>
 Please vote only once per day.</p>
 
 <h4 align="center" class="bignwhite"><font color="#FFFFFF">Quick News</font></h4>
