Remove link to the defunct guestbook.cgi

--- a/guestbook/index.html
+++ b/guestbook/index.html
@@ -41,9 +41,11 @@
 
 <p>
 <font face="Arial,Helvetica,Geneva" size="4">
-<a href="/cgi-bin/guestbook/guestbook.cgi">EotL's Guestbook Entries</a></font><br />
-See what everyone else had to say, then
-let everyone know what's on your mind!</p>
+<a href="#" onClick="alert('Nothing to see here, move along.')"><del>EotL's Guestbook Entries</del></a></font><br />
+<del>See what everyone else had to say, then
+let everyone know what's on your mind!</del></p>
+<p>The guestbook has been disabled,
+thanks web spammers.</p>
 
 <p>
 <font face="Arial,Helvetica,Geneva" size="4">
