Redid description of Etc guild

--- a/guilds/etc.html
+++ b/guilds/etc.html
@@ -51,25 +51,70 @@
 
 <p><em>Guild wizard: Devo</em></p>
 
-<h5 class="hsep">Guild Titles</h5>
-
-None
-<br />
-
-<hr noshade="noshade" />
-
-<p style="font-family:monospace;">
-You focus your mind on your target.</br>
-Your mind centers on the concept of a magic vending machine.</br>
-Your mighty mental facilities concentrate themselves.</br>
-The Machine is all.</br>
-There is a quick rush of disco music, and when you open your eyes, there is a
-Magic Vending Machine in the room.</br>
-&gt; buy wag</br> wag falls out of the machine.</br>
- Look at it for more info.</br>
- Welcome to WAG.</br>
- You lamely wave goodbye long after productive time is gone.
+<p>This group of people have mastered a mixed bag of skills that range
+from expertize in industrial relations through to crochet and the psychic
+disposal of rubbish. You can see one of their many skills in action below:
 </p>
+<pre style="font-size:50%;" >&gt; summon machine
+You focus your mind on your target.
+Your mind centers on the concept of a magic vending machine.
+Your mighty mental facilities concentrate themselves.
+The Machine is all.
+There is a quick rush of disco music, and when you open your eyes, there is a
+Magic Vending Machine in the room.
+&gt; look at machine
+Vending Machine.
+Type 'stuff' to see what it's got.
+Type 'stuff -s' to see a shortened version.
+&gt; stuff
+                             Mr. Flintstone's Offerings
+
+  Cost          Items available are:                            Item name
+  ----          -----------------------------                   ---------
+    10  a backpack to carry stuff in                            backpack
+   100  a deck of cards                                         cards
+   100  a lottery ticket (by Superfluous)                       lotto
+   100  an EC bus pass                                          pass
+   100  a little pot of paint to colour your title (by Tabitha) pot
+   500  a chextra card so you don't need to carry cash          chextra
+   100  a 3 use titler to change your title                     titler
+   100  a crazy game of solitaire so you can play with yrself   solitaire
+   100  a colorful glowing necklace (by Nathan)                 necklace
+   250  a yahtzee score card                                    yahtzee
+        a magic token with lots of feeling commands             token
+        a Connect Four board                                    c4
+        a dagger to kill with                                   dagger
+        a doll to play with                                     doll
+        a gobang board                                          gobang
+        a Guide to EOTL [wristcomp]                             guide
+        the letter game                                         letter
+        a map of the Eternal City                               map
+        a short manual about the code here on EotL              manual
+        a minesweeper board                                     minesweeper
+        a mastermind game                                       mm
+        a pair of contacts to help you see the world better     contacts
+        an othello board                                        othello
+        a post-it note pad to drop notes to other players       postit
+        a purity test taker (by Aleron)                         pt
+        a rose to give to someone                               rose
+        a reset timer to time monster regens (By Stinger)       rtimer
+        a deck of Set cards                                     set
+        a stratego board                                        stratego
+        a Private Chatting device                               chat
+        a BOGLEG                                                bogleg
+        Binford Chess [tm]                                      chess
+        an Arena Notifier                                       arenan
+        a Calculator                                            calculator
+        a Word Association Game                                 wag
+
+        To buy something type: buy &lt;item name&gt;
+        To check the number of items bought type: count
+        For a shortened form of this list type: stuff -s
+&gt; buy wag wag falls out of the machine.
+Look at it for more info.
+Welcome to WAG.
+You lamely wave goodbye long after productive time is gone.
+</pre>
 
 
   </td>
