Photos of people from 2003 aren't exactly "new"

--- a/guestbook/index.html
+++ b/guestbook/index.html
@@ -45,7 +45,7 @@
 <del>See what everyone else had to say, then
 let everyone know what's on your mind!</del></p>
 <p>The guestbook has been disabled,
-thanks web spammers.</p>
+thanks web spammers!</p>
 
 <p>
 <font face="Arial,Helvetica,Geneva" size="4">
