--- a/photos/arch.html
+++ b/photos/arch.html
@@ -115,7 +115,7 @@ kind of death wish..."</p>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
   <td class="ss10">
-<a href="immortals/peaches.jpg">Peaches</a> <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /><br /></td>
+<a href="immortals/peaches.jpg">Peaches</a><br /></td>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
   <td class="ss10"><a href="immortals/minister.jpg">Reverend</a>, formerly Bigjamie, formerly Minister<br /></td>
@@ -123,7 +123,7 @@ kind of death wish..."</p>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
   <td class="ss10"><a href="immortals/ricorn.jpg">Ricorn</a> (on the right) and<br />
-<a href="pics2004/ricorn.jpg">Ricorn</a> (slightly older)<img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /><br />
+<a href="pics2004/ricorn.jpg">Ricorn</a> (slightly older)<br />
 </td>
 </tr>
 <tr>
