--- a/photos/mortals/index.html
+++ b/photos/mortals/index.html
@@ -99,8 +99,7 @@ players end up getting frobbed or purged.
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
-  <td width="382" class="ss10"><a href="../pics2004/cobra.jpg">Cobra</a>
-  <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /><br /></td>
+  <td width="382" class="ss10"><a href="../pics2004/cobra.jpg">Cobra</a><br /></td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
@@ -162,8 +161,7 @@ players end up getting frobbed or purged.
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
-  <td width="382" class="ss10"><a href="../pics2004/valentino_lara.jpg">Lara with husband, Valentino</a>
-  <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /><br /></td>
+  <td width="382" class="ss10"><a href="../pics2004/valentino_lara.jpg">Lara with husband, Valentino</a><br /></td>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
   <td width="382" class="ss10">Leviathan and Elle: <a href="Levi_1.JPG">photo 1</a>,
@@ -200,8 +198,7 @@ players end up getting frobbed or purged.
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
-  <td width="382" class="ss10"><a href="../pics2004/nederland.jpg">Nederland</a>
-  <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /><br /></td>
+  <td width="382" class="ss10"><a href="../pics2004/nederland.jpg">Nederland</a><br /></td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
@@ -213,8 +210,7 @@ players end up getting frobbed or purged.
 </tr>
 <tr>                                                                                                                        
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>                        
-    <td width="382" class="ss10"><a href="../pics2004/nyx.jpg">Nyx</a>
-    <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /><br /></td>                                                   
+    <td width="382" class="ss10"><a href="../pics2004/nyx.jpg">Nyx</a><br /></td>                                                   
     </tr> 
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
