--- a/photos/wiz.html
+++ b/photos/wiz.html
@@ -54,7 +54,7 @@
 <table border="0" cellpadding="0" cellspacing="0" width="410">
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
-  <td width="382" class="ss10"><a href="pics2004/ahab_arwen.jpg">Ahab</a> (with Arwen) <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /> and <br /><a href="pics2004/ahab_arwen_dancing.jpg">Ahab and Arwen dancing</a<img src="/img/new_small.gif" width="35" height="14" /></td>
+  <td width="382" class="ss10"><a href="pics2004/ahab_arwen.jpg">Ahab</a> (with Arwen) and <br /><a href="pics2004/ahab_arwen_dancing.jpg">Ahab and Arwen dancing</a></td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
@@ -72,11 +72,11 @@
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
   <td class="ss10"><a href="immortals/aleron.jpg">Aleron</a> and <br />
-   <a href="pics2004/aleron.gif">Aleron</a> (2001) <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /></td>
+   <a href="pics2004/aleron.gif">Aleron</a> (2001) </td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
-  <td class="ss10"><a href="pics2004/(l-r)alex_buttman_ice_someguy.jpg">Alex</a> (with Buttman, Ice, and a random non-mudder) <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /><br /></td>
+  <td class="ss10"><a href="pics2004/(l-r)alex_buttman_ice_someguy.jpg">Alex</a> (with Buttman, Ice, and a random non-mudder) <br /></td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_page.gif" alt="* " width="28" height="20" /></td>
@@ -113,12 +113,11 @@
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
-  <td class="ss10"><a href="pics2004/cozminsky.jpg">Cozminsky</a> <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /><br /></td>
+  <td class="ss10"><a href="pics2004/cozminsky.jpg">Cozminsky</a><br /></td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
-  <td class="ss10"><a href="pics2004/dent.jpg">Dent</a> <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /
-><br /></td>
+  <td class="ss10"><a href="pics2004/dent.jpg">Dent</a><br /></td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
@@ -142,8 +141,7 @@
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
-  <td class="ss10"><a href="pics2004/ghostbuster.gif">Ghostbuster</a> <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /
-><br /></td>
+  <td class="ss10"><a href="pics2004/ghostbuster.gif">Ghostbuster</a><br /></td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
@@ -163,8 +161,8 @@
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
-  <td class="ss10"><a href="pics2004/isaac.jpg">Isaac</a> <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /
-> and <br /><a href="pics2004/isaac2.jpg">Isaac</a> (again) <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /></td>
+  <td class="ss10"><a href="pics2004/isaac.jpg">Isaac</a>
+  and <br /><a href="pics2004/isaac2.jpg">Isaac</a> (again) </td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
@@ -186,12 +184,12 @@
   a photo of <a href="misc/peanut.jpg">Peanut</a>,
   another photo of <a href="immortals/kahlan-peanut.jpg">Kahlan and Peanut</a>, and
   <a href="misc/3pool.jpg">Nathan, Kahlan, and Locus at a pool hall</a> (2/2000)
-      <br /><a href="pics2004/whitewolf.jpg">Kahlan and Whitewolf</a> (2003) <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /><br /></td>
+      <br /><a href="pics2004/whitewolf.jpg">Kahlan and Whitewolf</a> (2003) <br /></td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_page.gif" alt="* " width="28" height="20" /></td>
   <td class="ss10"><a href="http://www.geocities.com/SunsetStrip/Stage/4300/kathead.html">Kathead</a>'s page<br />
-  <a href="pics2004/kathead.jpg">Kathead</a> <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /><br />
+  <a href="pics2004/kathead.jpg">Kathead</a><br />
 </td>
 </tr>
 <tr>
@@ -216,8 +214,7 @@
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
-  <td class="ss10"><a href="pics2004/litotes.jpg">Litotes</a> <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /
-><br /></td>
+  <td class="ss10"><a href="pics2004/litotes.jpg">Litotes</a><br /></td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
@@ -265,8 +262,7 @@
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
-  <td class="ss10"><a href="pics2004/nathan.jpg">Nathan</a> <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /
-><br /></td>
+  <td class="ss10"><a href="pics2004/nathan.jpg">Nathan</a><br /></td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
@@ -287,8 +283,7 @@
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
-  <td class="ss10"><a href="pics2004/retribution.jpg">Retribution</a> <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /
-><br /></td>
+  <td class="ss10"><a href="pics2004/retribution.jpg">Retribution</a><br /></td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
@@ -345,8 +340,8 @@
       <a href="immortals/valentino3.jpg">three</a>, and
       <a href="immortals/valentino4.jpg">four</a>.  Also, here are
 <a href="immortals/little_paul_and_zeke.jpg">Smurf and Valentino at age 7</a> and <a href="pics2004/valentino.jpg">
-here he is a little bit older.</a> <img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" />, and<br />
-<a href="pics2004/valentino_lara.jpg">Valentino with wife, Lara</a><img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /><br /></td>
+here he is a little bit older.</a>, and<br />
+<a href="pics2004/valentino_lara.jpg">Valentino with wife, Lara</a><br /></td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
@@ -354,7 +349,7 @@ here he is a little bit older.</a> <img src="/img/new_small.gif" alt="[NEW]" wid
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
-  <td class="ss10"><a href="pics2004/whitewolf.jpg">Whitewolf</a> (and Kahlan)<img src="/img/new_small.gif" alt="[NEW]" width="35" height="14" /><br /></td>
+  <td class="ss10"><a href="pics2004/whitewolf.jpg">Whitewolf</a> (and Kahlan)<br /></td>
 </tr>
 <tr>
   <td valign="top" width="28"><img src="/img/icon_photo.gif" alt="* " width="28" height="20" /></td>
