Updated Trenol description. Mention move to bfb.

--- a/history.html
+++ b/history.html
@@ -67,14 +67,16 @@ The two muds merged together later that year and
 was renamed <strong>End of the Line</strong>.
 In 1990 the mud was relocated from UCR to
 <a href="http://www.stanford.edu/" target="_top">Stanford University</a>,
-where it has been ever since.
-Despite its location, EotL is not sanctioned by or affiliated with Stanford.
+where it lived on the same machine until August 2005. Then after
+migrating to a new host under a similar arrangement Eotl's existence
+was made known to a manager who disapproved and the mud moved again
+to a server operated by Zippo in September.
 </p>
 
 <h4>EotL Leadership</h4>
 
 <p>
-The Janitors (a.k.a. Gods) of EotL are Duncan and Zippo.
+The Janitors (a.k.a. Gods) of EotL are Duncan, Zippo and Cozminsky.
 Past Gods include Xurbax, Bainshee, Sledge and Sly.
 </p>
 
@@ -82,9 +84,9 @@ Past Gods include Xurbax, Bainshee, Sledge and Sly.
 
 <p>
 <span class="bignpurple">E</span>otL runs
-on a dedicated Ultrasparc 140 with 128 MB RAM and two gigabytes of local space.
-The game uses a heavily-modified Amylaar driver.
-In August 2000, EotL went to the LDMud 3.2.9 driver.
+on a dedicated Quad core Xeon E5405 with 16 GB RAM.
+The game uses a modified LDMud driver.
+In November 2006, EotL went to the LDMud 3.2.14 driver.
 (LD = Lars D&uuml;ening)
 </p>
 
