--- a/races/index.html
+++ b/races/index.html
@@ -773,7 +773,7 @@ cute as a race can be.</p>
 <a name="Trenol"></a>
 <h3>Trenol</h3>
 <p>
-Trenols, slowly becoming one of the most peculiar of beings, have just about
+Trenols, a moneky-like race who're slowly becoming more peculiar, have just about
 all of the features of the human race.  On average, they are not so tall or
 as strong as a human, yet they are quick and pack quite a constitution.  They
 are especially fond of humans (which they call "tail-less ones") and of
