Added info to reflect new elf subraces

--- a/races/index.html
+++ b/races/index.html
@@ -87,14 +87,14 @@
 <td width="131" valign="top" nowrap="nowrap" class="multicol">
 <span class="blue1"><strong>Elf Races</strong></span><br />
 <a href="#Elf">Elf</a><br />
-<a href="#BeerElf">Beer Elf</a> <span style="color: red;">*</span><br />
+<a href="#BeerElf">Beer Elf</a> <span style="color: red;">†</span><br />
 <a href="#DrowElf">Drow Elf</a><br />
 <a href="#GreyElf">Grey Elf</a> <span style="color: red;">*</span><br />
 <a href="#HalfElf">Half Elf</a> <span style="color: red;">*</span><br />
-<a href="#HighElf">High Elf</a> <span style="color: red;">*</span><br />
+<a href="#HighElf">High Elf</a> <span style="color: red;">†</span><br />
 <a href="#SwissVampireElf">Swiss Vampire Elf</a> <span style="color: red;">*</span><br />
-<a href="#WoodElf">Wood Elf</a> <span style="color: red;">*</span><br />
-<img src="/img/clr.gif" alt="" width="1" height="1" vspace="3" /><br />
+<a href="#WoodElf">Wood Elf</a> <span style="color: red;">†</span><br />
+<img src="/img/clr.gif" alt="" width="1" height="1" vspace†="3" /><br />
 <span class="blue1"><strong>Human Races</strong></span><br />
 <a href="#HighHuman">High Human</a> <span style="color: red;">*</span><br />
 <a href="#Human">Human</a><br />
@@ -103,7 +103,9 @@
 </tr></table>
 <!-- END INNER TABLE -->
 
-<p><span style="color: red;">*</span> no longer available</p>
+<p><span style="color: red;">*</span> no longer available</br>
+<span style="color: red;">†</span>subrace option when raising skills</p>
+
 
 <hr noshade="noshade" />
 
